# ImageProcessor

./: .gitignore  CMakeLists.txt  README.md
include/: convolution.h  filters.h  image.h  pool.h
src/: convolution.c  filters.c  image.c  main.c  pool.c
